# ai-trading-system

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.json  .pyre_configuration  .vercelignore  100_GIORNI_PIANO.md  ACCESSIBILITY_OPTIMIZATION.md  AI_Trading_System_Pro.spec  API_FLOW_DIAGRAM.md  API_INTEGRATION_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_INTEGRATION.md  CHANGELOG.md  CHECKLIST_MANCANZE.md  CI_CD_FIXES_TODO.md  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  COMMIT_PLAN.md  COMPONENT_DIAGRAM.md  CONTRIBUTING.md  DAILY_REPORT_2026-03-09.md  DAILY_REPORT_2026-03-15.md  DASHBOARD_README.md  DASHBOARD_UNIFICATION_PLAN.md  DASHBOARD_UX_IMPROVEMENTS.md  DEMO_RELEASE_CHECKLIST.md  DEPENDENCIES.txt  DEPLOYMENT_DECISION.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DISCORD_INVITE.md  DOCKER_CONTAINERS.txt  DOCKER_IMAGES.txt  DOCUMENTATION.md  Dockerfile  Dockerfile.backup  Dockerfile.render  Dockerfile.render.optimized  ECOSYSTEM_MAP.md  (+210 more)
.history/: vercel_20260309201022.json  vercel_20260309201112.json  vercel_20260309201455.json  vercel_20260309201506.json  vercel_20260309204140.json  vercel_20260309204651.json  vercel_20260309204732.json  vercel_20260309204803.json  vercel_20260309212753.json  vercel_20260309222027.json  vercel_20260309222328.json  vercel_20260309222823.json  vercel_20260309225508.json  vercel_20260309230417.json
agent_coordination/: PROTOCOL.md  coordinator.py
alembic/: env.py
analytics/: dashboard.py
api/: index.py  requirements.txt  test.py
app/: __init__.py  backtest.py  main.py  metrics.py  scheduler.py
dashboard/: app.py  dashboard.py  dashboard_api.py  dashboard_memory_monitor.py  dashboard_realtime_graphs.py  strategy_comparison_tab.py
data/: backtest_20260217_113111.json  ml_model_BTCUSDT.pkl  ml_model_ETHUSDT.pkl  ml_model_SOLUSDT.pkl  signals_20260217_112512.json  signals_20260217_112523.json  signals_20260217_112606.json  signals_20260217_113119.json  signals_20260217_113142.json  signals_20260217_113208.json  signals_20260217_120133.json  signals_20260217_120911.json  signals_20260217_174209.json  trading_state.db
decision_engine/: __init__.py  core.py  external.py  five_question.py  monte_carlo.py  signals.py
deploy-temp/: requirements-vercel.txt  vercel.json
desktop_app/: AI_Trading_System_Pro.spec  README.md  build_exe.py  main.py  main_tkinter.py
docker/: Dockerfile.api  Dockerfile.prod  Dockerfile.production  Dockerfile.stable  __init__.py
docs/: AGENTS_ARCHITECTURE.md  API_DOCS.md  API_DOCUMENTATION.md  API_REFERENCE.md  API_V2.md  APP_CONSOLIDATION_PLAN.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_V2.md  AUTONOMOUS_AGENT.md  CHAT_TRANSFER_SUMMARY_2026-02-24.md  CODE_REVIEW_REPORT.md  CONSOLIDATION_STATUS_REPORT.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_V2.md  DATA_PYRAMID.md  DEPLOYMENT.md  FRONTEND_100PT_PROGRESS.md  GO_TO_MARKET_COMPLIANCE_PLAN.md  GUIDA_ITALIANA.md  GUIDA_ROUTING.md  MODEL_REGISTRY.md  NEWS_FEED_IMPLEMENTATION.md  PROJECT_FINALIZATION_TRACKER.md  README.md  REFACTOR_PLAN.md  RISK_BOOK.md  RUNBOOK_INCIDENTS.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_DOCUMENTATION.md  TRADE_HISTORY_IMPLEMENTATION.md  UE_GO_LIVE_CHECKLIST.md  video_tutorial.html
frontend/: TODO.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  temp.html  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
java-frontend/: pom.xml
kubernetes/: deployment.yaml
landing/: index.html  success.html
migrations/: env.py
monitoring/: prometheus.yml
nextjs-frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
openclaw_skills/: LEVEL3_INTEGRATION.md  README.md  __init__.py  api_wrapper.py  composed_strategies.py  garch_volatility.py  hmm_regime_detect.py  intent_router.py  minimax_connector.py  monte_carlo_paths.py  multi_agent_config.yaml  param_validator.py  portfolio_optimizer.py  quant_result.py  quant_trading_assistant.md  registry_config.yaml  sandbox.py  skill.yaml  skill_orchestrator.py  skill_registry.py  skill_registry.yaml  test_api_wrapper.py  test_level3_components.py  test_minimax_connection.py
plans/: FIX_NEWS_FEED_PLAN.md  NEWS_USAGE_ANALYSIS.md  PROJECT_STRUCTURE_EXPLAINED.md  implementation_plan.md
public/: _redirects  index.html
scripts/: backup.sh  backup_database.py  build.sh  build_first_exe.ps1  build_kivy_exe.ps1  check_data_live.ps1  cleanup.sh  create_desktop_shortcut.ps1  deploy.sh  desktop_launcher.py  dev_start_ngrok.ps1  dev_stop_ngrok.ps1  docs.sh  generate_report.py  (+18 more)
(+548 files in other folders)
